# system-sim

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
demos/ablation/: README.md  demo_ablation.cpp
demos/cross_process/: README.md  demo_cross_process.cpp
demos/cross_user/: README.md  demo_cross_user.cpp
demos/injection/: demo_injection.cpp
demos/malicious_mapping/: README.md  demo_malicious_mapping.cpp
demos/normal/: README.md  demo_normal.cpp
demos/rop/: demo_rop.cpp
docs/: Demo_Claim_Boundary_v3.1.md  dev_plan.md  progress_tracking_v3.md  progress_tracking_v4.md  project_log.md  review_plan_bycodex.md  review_repo_byclaude.md  review_repo_byclaude_CN.md  review_repo_bycodex.md  spec_i2_i7.md  system_design_v3.md  system_design_v4.md
include/core/: executor.hpp  scaffold.hpp
include/isa/: assembler.hpp  instr.hpp  opcode.hpp  scaffold.hpp
include/kernel/: process.hpp
include/security/: audit.hpp  code_codec.hpp  ewc.hpp  gateway.hpp  hardware.hpp  pvt.hpp  scaffold.hpp  securir_builder.hpp  securir_package.hpp  spe.hpp
src/core/: executor.cpp  scaffold.cpp
src/isa/: assembler.cpp  opcode.cpp  scaffold.cpp
src/kernel/: process.cpp  scaffold.cpp
src/security/: audit.cpp  code_codec.cpp  ewc.cpp  gateway.cpp  pvt.cpp  scaffold.cpp  securir_builder.cpp  spe.cpp
tests/: test_executor.cpp  test_gateway.cpp  test_harness.hpp  test_isa_assembler.cpp  test_kernel_process.cpp  test_pvt.cpp  test_sanity.cpp  test_securir_builder.cpp  test_spe.cpp
